add autolabel button

--- a/resources.qrc
+++ b/resources.qrc
@@ -17,7 +17,7 @@
 <file alias="copy">resources/icons/copy.png</file>
 <file alias="edit">resources/icons/edit.png</file>
 <file alias="open">resources/icons/open.png</file>
-<file alias="autoLabel">resources/icons/open.png</file>
+<file alias="autoLabel">resources/icons/autoLabel.svg</file>
 <file alias="save">resources/icons/save.png</file>
 <file alias="format_voc">resources/icons/format_voc.png</file>
 <file alias="format_yolo">resources/icons/format_yolo.png</file>
